// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hiscores getHiscores should default type to HiscoreTypes.normal 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should hit the specified hiscore type endpoint 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool_seasonal/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a GET request 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should make a request with the passed in player name 1`] = `
{
  "method": "GET",
  "params": {
    "player": "Bald",
  },
  "url": "http://services.runescape.com/m=hiscore_oldschool/index_lite.ws",
}
`;

exports[`Hiscores getHiscores should properly parse rank and kills for each boss 1`] = `
{
  "abyssalSire": {
    "kills": "378",
    "rank": "59731",
  },
  "alchemicalHydra": {
    "kills": "-1",
    "rank": "-1",
  },
  "artio": {
    "kills": "-1",
    "rank": "-1",
  },
  "barrowsChests": {
    "kills": "394",
    "rank": "110649",
  },
  "bryophyta": {
    "kills": "-1",
    "rank": "-1",
  },
  "callisto": {
    "kills": "-1",
    "rank": "-1",
  },
  "calvarion": {
    "kills": "-1",
    "rank": "-1",
  },
  "cerberus": {
    "kills": "523",
    "rank": "94256",
  },
  "chambersOfXeric": {
    "kills": "-1",
    "rank": "-1",
  },
  "chambersOfXericChallengeMode": {
    "kills": "-1",
    "rank": "-1",
  },
  "chaosElemental": {
    "kills": "6",
    "rank": "160290",
  },
  "chaosFanatic": {
    "kills": "7",
    "rank": "191412",
  },
  "commanderZilyana": {
    "kills": "55",
    "rank": "131458",
  },
  "corporealBeast": {
    "kills": "93",
    "rank": "69364",
  },
  "corruptedGauntlet": {
    "kills": "-1",
    "rank": "-1",
  },
  "crazyArchaeologist": {
    "kills": "-1",
    "rank": "-1",
  },
  "dagannothPrime": {
    "kills": "164",
    "rank": "129476",
  },
  "dagannothRex": {
    "kills": "160",
    "rank": "197639",
  },
  "dagannothSupreme": {
    "kills": "162",
    "rank": "131149",
  },
  "derangedArchaeologist": {
    "kills": "-1",
    "rank": "-1",
  },
  "gauntlet": {
    "kills": "-1",
    "rank": "-1",
  },
  "generalGraardor": {
    "kills": "13",
    "rank": "320681",
  },
  "giantMole": {
    "kills": "651",
    "rank": "43129",
  },
  "grotesqueGuardians": {
    "kills": "-1",
    "rank": "-1",
  },
  "hespori": {
    "kills": "20",
    "rank": "315446",
  },
  "kalphiteQueen": {
    "kills": "32",
    "rank": "154287",
  },
  "kingBlackDragon": {
    "kills": "180",
    "rank": "164470",
  },
  "kraken": {
    "kills": "33",
    "rank": "386137",
  },
  "kreearra": {
    "kills": "-1",
    "rank": "-1",
  },
  "krilTsutsaroth": {
    "kills": "61",
    "rank": "119639",
  },
  "mimic": {
    "kills": "1",
    "rank": "98329",
  },
  "nex": {
    "kills": "-1",
    "rank": "-1",
  },
  "nightmare": {
    "kills": "11",
    "rank": "68866",
  },
  "obor": {
    "kills": "-1",
    "rank": "-1",
  },
  "phantomMuspah": {
    "kills": "-1",
    "rank": "-1",
  },
  "phosanisNightmare": {
    "kills": "-1",
    "rank": "-1",
  },
  "sarachnis": {
    "kills": "-1",
    "rank": "-1",
  },
  "scorpia": {
    "kills": "-1",
    "rank": "-1",
  },
  "skotizo": {
    "kills": "9",
    "rank": "340565",
  },
  "spindel": {
    "kills": "-1",
    "rank": "-1",
  },
  "tempoross": {
    "kills": "-1",
    "rank": "-1",
  },
  "theatreOfBlood": {
    "kills": "-1",
    "rank": "-1",
  },
  "theatreOfBloodHardMode": {
    "kills": "-1",
    "rank": "-1",
  },
  "thermonuclearSmokeDevil": {
    "kills": "62",
    "rank": "185038",
  },
  "tombsOfAmascut": {
    "kills": "-1",
    "rank": "-1",
  },
  "tombsOfAmascutExpertMode": {
    "kills": "-1",
    "rank": "-1",
  },
  "tzKalZuk": {
    "kills": "-1",
    "rank": "-1",
  },
  "tzTokJad": {
    "kills": "6",
    "rank": "132805",
  },
  "venenatis": {
    "kills": "191",
    "rank": "40139",
  },
  "vetion": {
    "kills": "-1",
    "rank": "-1",
  },
  "vorkath": {
    "kills": "134",
    "rank": "289420",
  },
  "wintertodt": {
    "kills": "404",
    "rank": "236447",
  },
  "zalcano": {
    "kills": "-1",
    "rank": "-1",
  },
  "zulrah": {
    "kills": "690",
    "rank": "130143",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank and score for each minigame 1`] = `
{
  "bountyHunter": {
    "rank": "-1",
    "score": "-1",
  },
  "bountyHunterLegacy": {
    "rank": "166621",
    "score": "6",
  },
  "bountyHunterRogues": {
    "rank": "-1",
    "score": "-1",
  },
  "bountyHunterRoguesLegacy": {
    "rank": "112087",
    "score": "6",
  },
  "clueScrollsAll": {
    "rank": "39763",
    "score": "769",
  },
  "clueScrollsBeginner": {
    "rank": "110824",
    "score": "27",
  },
  "clueScrollsEasy": {
    "rank": "72321",
    "score": "65",
  },
  "clueScrollsElite": {
    "rank": "15368",
    "score": "118",
  },
  "clueScrollsHard": {
    "rank": "11160",
    "score": "452",
  },
  "clueScrollsMaster": {
    "rank": "34024",
    "score": "51",
  },
  "clueScrollsMedium": {
    "rank": "196652",
    "score": "56",
  },
  "leaguePoints": {
    "rank": "-1",
    "score": "-1",
  },
  "lms": {
    "rank": "72844",
    "score": "713",
  },
  "pvpArena": {
    "rank": "-1",
    "score": "-1",
  },
  "riftsClosed": {
    "rank": "153371",
    "score": "95",
  },
  "soulWarsZeal": {
    "rank": "-1",
    "score": "-1",
  },
}
`;

exports[`Hiscores getHiscores should properly parse rank, level, and xp for each skill 1`] = `
{
  "agility": {
    "level": "86",
    "rank": "149279",
    "xp": "3666341",
  },
  "attack": {
    "level": "99",
    "rank": "64730",
    "xp": "20545561",
  },
  "construction": {
    "level": "94",
    "rank": "80737",
    "xp": "8168839",
  },
  "cooking": {
    "level": "99",
    "rank": "58810",
    "xp": "14826963",
  },
  "crafting": {
    "level": "99",
    "rank": "73502",
    "xp": "13298684",
  },
  "defence": {
    "level": "99",
    "rank": "41141",
    "xp": "19722694",
  },
  "farming": {
    "level": "99",
    "rank": "166844",
    "xp": "13166060",
  },
  "firemaking": {
    "level": "99",
    "rank": "53114",
    "xp": "14100677",
  },
  "fishing": {
    "level": "99",
    "rank": "106234",
    "xp": "13034820",
  },
  "fletching": {
    "level": "99",
    "rank": "45207",
    "xp": "13483788",
  },
  "herblore": {
    "level": "99",
    "rank": "37705",
    "xp": "13193941",
  },
  "hitpoints": {
    "level": "99",
    "rank": "122197",
    "xp": "28805913",
  },
  "hunter": {
    "level": "83",
    "rank": "231210",
    "xp": "2861287",
  },
  "magic": {
    "level": "99",
    "rank": "68128",
    "xp": "19878940",
  },
  "mining": {
    "level": "87",
    "rank": "189013",
    "xp": "4132348",
  },
  "overall": {
    "level": "2200",
    "rank": "67661",
    "xp": "303540281",
  },
  "prayer": {
    "level": "99",
    "rank": "33714",
    "xp": "13165748",
  },
  "ranged": {
    "level": "99",
    "rank": "177458",
    "xp": "20358697",
  },
  "runecrafting": {
    "level": "86",
    "rank": "152593",
    "xp": "3601602",
  },
  "slayer": {
    "level": "99",
    "rank": "83237",
    "xp": "13923259",
  },
  "smithing": {
    "level": "89",
    "rank": "142873",
    "xp": "5179738",
  },
  "strength": {
    "level": "99",
    "rank": "70139",
    "xp": "24974617",
  },
  "thieving": {
    "level": "91",
    "rank": "156270",
    "xp": "6414961",
  },
  "woodcutting": {
    "level": "99",
    "rank": "130463",
    "xp": "13034803",
  },
}
`;

exports[`Hiscores getHiscores should return skills, minigames, and bosses from a csv 1`] = `
{
  "bosses": {
    "abyssalSire": {
      "kills": "378",
      "rank": "59731",
    },
    "alchemicalHydra": {
      "kills": "-1",
      "rank": "-1",
    },
    "artio": {
      "kills": "-1",
      "rank": "-1",
    },
    "barrowsChests": {
      "kills": "394",
      "rank": "110649",
    },
    "bryophyta": {
      "kills": "-1",
      "rank": "-1",
    },
    "callisto": {
      "kills": "-1",
      "rank": "-1",
    },
    "calvarion": {
      "kills": "-1",
      "rank": "-1",
    },
    "cerberus": {
      "kills": "523",
      "rank": "94256",
    },
    "chambersOfXeric": {
      "kills": "-1",
      "rank": "-1",
    },
    "chambersOfXericChallengeMode": {
      "kills": "-1",
      "rank": "-1",
    },
    "chaosElemental": {
      "kills": "6",
      "rank": "160290",
    },
    "chaosFanatic": {
      "kills": "7",
      "rank": "191412",
    },
    "commanderZilyana": {
      "kills": "55",
      "rank": "131458",
    },
    "corporealBeast": {
      "kills": "93",
      "rank": "69364",
    },
    "corruptedGauntlet": {
      "kills": "-1",
      "rank": "-1",
    },
    "crazyArchaeologist": {
      "kills": "-1",
      "rank": "-1",
    },
    "dagannothPrime": {
      "kills": "164",
      "rank": "129476",
    },
    "dagannothRex": {
      "kills": "160",
      "rank": "197639",
    },
    "dagannothSupreme": {
      "kills": "162",
      "rank": "131149",
    },
    "derangedArchaeologist": {
      "kills": "-1",
      "rank": "-1",
    },
    "gauntlet": {
      "kills": "-1",
      "rank": "-1",
    },
    "generalGraardor": {
      "kills": "13",
      "rank": "320681",
    },
    "giantMole": {
      "kills": "651",
      "rank": "43129",
    },
    "grotesqueGuardians": {
      "kills": "-1",
      "rank": "-1",
    },
    "hespori": {
      "kills": "20",
      "rank": "315446",
    },
    "kalphiteQueen": {
      "kills": "32",
      "rank": "154287",
    },
    "kingBlackDragon": {
      "kills": "180",
      "rank": "164470",
    },
    "kraken": {
      "kills": "33",
      "rank": "386137",
    },
    "kreearra": {
      "kills": "-1",
      "rank": "-1",
    },
    "krilTsutsaroth": {
      "kills": "61",
      "rank": "119639",
    },
    "mimic": {
      "kills": "1",
      "rank": "98329",
    },
    "nex": {
      "kills": "-1",
      "rank": "-1",
    },
    "nightmare": {
      "kills": "11",
      "rank": "68866",
    },
    "obor": {
      "kills": "-1",
      "rank": "-1",
    },
    "phantomMuspah": {
      "kills": "-1",
      "rank": "-1",
    },
    "phosanisNightmare": {
      "kills": "-1",
      "rank": "-1",
    },
    "sarachnis": {
      "kills": "-1",
      "rank": "-1",
    },
    "scorpia": {
      "kills": "-1",
      "rank": "-1",
    },
    "skotizo": {
      "kills": "9",
      "rank": "340565",
    },
    "spindel": {
      "kills": "-1",
      "rank": "-1",
    },
    "tempoross": {
      "kills": "-1",
      "rank": "-1",
    },
    "theatreOfBlood": {
      "kills": "-1",
      "rank": "-1",
    },
    "theatreOfBloodHardMode": {
      "kills": "-1",
      "rank": "-1",
    },
    "thermonuclearSmokeDevil": {
      "kills": "62",
      "rank": "185038",
    },
    "tombsOfAmascut": {
      "kills": "-1",
      "rank": "-1",
    },
    "tombsOfAmascutExpertMode": {
      "kills": "-1",
      "rank": "-1",
    },
    "tzKalZuk": {
      "kills": "-1",
      "rank": "-1",
    },
    "tzTokJad": {
      "kills": "6",
      "rank": "132805",
    },
    "venenatis": {
      "kills": "191",
      "rank": "40139",
    },
    "vetion": {
      "kills": "-1",
      "rank": "-1",
    },
    "vorkath": {
      "kills": "134",
      "rank": "289420",
    },
    "wintertodt": {
      "kills": "404",
      "rank": "236447",
    },
    "zalcano": {
      "kills": "-1",
      "rank": "-1",
    },
    "zulrah": {
      "kills": "690",
      "rank": "130143",
    },
  },
  "minigames": {
    "bountyHunter": {
      "rank": "-1",
      "score": "-1",
    },
    "bountyHunterLegacy": {
      "rank": "166621",
      "score": "6",
    },
    "bountyHunterRogues": {
      "rank": "-1",
      "score": "-1",
    },
    "bountyHunterRoguesLegacy": {
      "rank": "112087",
      "score": "6",
    },
    "clueScrollsAll": {
      "rank": "39763",
      "score": "769",
    },
    "clueScrollsBeginner": {
      "rank": "110824",
      "score": "27",
    },
    "clueScrollsEasy": {
      "rank": "72321",
      "score": "65",
    },
    "clueScrollsElite": {
      "rank": "15368",
      "score": "118",
    },
    "clueScrollsHard": {
      "rank": "11160",
      "score": "452",
    },
    "clueScrollsMaster": {
      "rank": "34024",
      "score": "51",
    },
    "clueScrollsMedium": {
      "rank": "196652",
      "score": "56",
    },
    "leaguePoints": {
      "rank": "-1",
      "score": "-1",
    },
    "lms": {
      "rank": "72844",
      "score": "713",
    },
    "pvpArena": {
      "rank": "-1",
      "score": "-1",
    },
    "riftsClosed": {
      "rank": "153371",
      "score": "95",
    },
    "soulWarsZeal": {
      "rank": "-1",
      "score": "-1",
    },
  },
  "skills": {
    "agility": {
      "level": "86",
      "rank": "149279",
      "xp": "3666341",
    },
    "attack": {
      "level": "99",
      "rank": "64730",
      "xp": "20545561",
    },
    "construction": {
      "level": "94",
      "rank": "80737",
      "xp": "8168839",
    },
    "cooking": {
      "level": "99",
      "rank": "58810",
      "xp": "14826963",
    },
    "crafting": {
      "level": "99",
      "rank": "73502",
      "xp": "13298684",
    },
    "defence": {
      "level": "99",
      "rank": "41141",
      "xp": "19722694",
    },
    "farming": {
      "level": "99",
      "rank": "166844",
      "xp": "13166060",
    },
    "firemaking": {
      "level": "99",
      "rank": "53114",
      "xp": "14100677",
    },
    "fishing": {
      "level": "99",
      "rank": "106234",
      "xp": "13034820",
    },
    "fletching": {
      "level": "99",
      "rank": "45207",
      "xp": "13483788",
    },
    "herblore": {
      "level": "99",
      "rank": "37705",
      "xp": "13193941",
    },
    "hitpoints": {
      "level": "99",
      "rank": "122197",
      "xp": "28805913",
    },
    "hunter": {
      "level": "83",
      "rank": "231210",
      "xp": "2861287",
    },
    "magic": {
      "level": "99",
      "rank": "68128",
      "xp": "19878940",
    },
    "mining": {
      "level": "87",
      "rank": "189013",
      "xp": "4132348",
    },
    "overall": {
      "level": "2200",
      "rank": "67661",
      "xp": "303540281",
    },
    "prayer": {
      "level": "99",
      "rank": "33714",
      "xp": "13165748",
    },
    "ranged": {
      "level": "99",
      "rank": "177458",
      "xp": "20358697",
    },
    "runecrafting": {
      "level": "86",
      "rank": "152593",
      "xp": "3601602",
    },
    "slayer": {
      "level": "99",
      "rank": "83237",
      "xp": "13923259",
    },
    "smithing": {
      "level": "89",
      "rank": "142873",
      "xp": "5179738",
    },
    "strength": {
      "level": "99",
      "rank": "70139",
      "xp": "24974617",
    },
    "thieving": {
      "level": "91",
      "rank": "156270",
      "xp": "6414961",
    },
    "woodcutting": {
      "level": "99",
      "rank": "130463",
      "xp": "13034803",
    },
  },
}
`;
